feat: ui ajust http://doc.hz.netease.com/pages/viewpage.action?pageId=311158000

--- a/src/cell/index.less
+++ b/src/cell/index.less
@@ -6,11 +6,12 @@
   display: flex;
   box-sizing: border-box;
   width: 100%;
-  padding: @cell-vertical-padding @cell-horizontal-padding;
+  padding: 14px 16px;
   overflow: hidden;
   color: @cell-text-color;
   font-size: @cell-font-size;
-  line-height: @cell-line-height;
+  line-height: 22px;
+  min-height: 50px;
   background-color: @cell-background-color;
 
   &::after {
