--- a/src/divider/index.less
+++ b/src/divider/index.less
@@ -18,7 +18,7 @@
     box-sizing: border-box;
     height: 1px;
     // border-color: inherit;
-    border-color: #000;
+    border-color: #e8e9eb;
     border-style: inherit;
     border-width: @border-width-base 0 0;
   }
