--- a/src/style/var.less
+++ b/src/style/var.less
@@ -219,7 +219,7 @@
 @cell-font-size: @font-size-md;
 @cell-line-height: 24px;
 @cell-vertical-padding: 16px;
-@cell-horizontal-padding: @padding-md;
+@cell-horizontal-padding: 16px;
 @cell-text-color: @text-color;
 @cell-background-color: @white;
 @cell-border-color: @border-color;
@@ -817,7 +817,7 @@
 @tab-line-height: @line-height-md;
 
 // Tabs
-@tabs-default-color: @red;
+@tabs-default-color: @blue;
 @tabs-line-height: 44px;
 @tabs-card-height: 30px;
 @tabs-nav-background-color: @white;
