--- a/src/tab/index.less
+++ b/src/tab/index.less
@@ -7,6 +7,12 @@
       flex-shrink: 0;
       box-sizing: border-box;
       width: 100%;
+
+      text-align: center;
+      // padding-top: 28px;
+
+      // display: flex;
+      // justify-content: center;
     }
 
     &-wrapper--inactive {
