--- a/src/uploader/index.less
+++ b/src/uploader/index.less
@@ -41,7 +41,8 @@
     box-sizing: border-box;
     width: @uploader-size;
     height: @uploader-size;
-    margin: 0 @padding-xs @padding-xs 0;
+    // margin: 0 @padding-xs @padding-xs 0;
+    padding: 0 @padding-xs @padding-xs 0;
     background-color: @uploader-upload-background-color;
 
     &:active {
@@ -55,6 +56,7 @@
     &-icon {
       color: @uploader-icon-color;
       font-size: @uploader-icon-size;
+      margin-left: 12px;
     }
 
     &-text {
