style: add van-haptics-feedback class helper

--- a/packages/vant/src/style/base.less
+++ b/packages/vant/src/style/base.less
@@ -31,6 +31,10 @@
   padding-bottom: env(safe-area-inset-bottom);
 }
 
+.van-haptics-feedback:active {
+  opacity: var(--van-active-opacity);
+}
+
 [class*='van-hairline'] {
   &::after {
     .hairline();
