feat: add --van-text-color-tertiary css var

--- a/packages/vant/src/action-sheet/var.less
+++ b/packages/vant/src/action-sheet/var.less
@@ -10,7 +10,7 @@
 @action-sheet-item-font-size: var(--van-font-size-lg);
 @action-sheet-item-line-height: var(--van-line-height-lg);
 @action-sheet-item-text-color: var(--van-text-color);
-@action-sheet-item-disabled-text-color: var(--van-gray-5);
+@action-sheet-item-disabled-text-color: var(--van-text-color-tertiary);
 @action-sheet-subname-color: var(--van-text-color-secondary);
 @action-sheet-subname-font-size: var(--van-font-size-sm);
 @action-sheet-subname-line-height: var(--van-line-height-sm);
