--- a/packages/vant/src/cascader/var.less
+++ b/packages/vant/src/cascader/var.less
@@ -10,6 +10,6 @@
 @cascader-tabs-height: 48px;
 @cascader-active-color: var(--van-danger-color);
 @cascader-options-height: 384px;
-@cascader-option-disabled-color: var(--van-gray-5);
+@cascader-option-disabled-color: var(--van-text-color-tertiary);
 @cascader-tab-color: var(--van-text-color);
 @cascader-unselected-tab-color: var(--van-text-color-secondary);
