--- a/packages/vant/src/collapse-item/var.less
+++ b/packages/vant/src/collapse-item/var.less
@@ -6,4 +6,4 @@
 @collapse-item-content-line-height: 1.5;
 @collapse-item-content-text-color: var(--van-text-color-secondary);
 @collapse-item-content-background-color: var(--van-background-color-light);
-@collapse-item-title-disabled-color: var(--van-gray-5);
+@collapse-item-title-disabled-color: var(--van-text-color-tertiary);
