--- a/packages/vant/src/radio/var.less
+++ b/packages/vant/src/radio/var.less
@@ -7,5 +7,5 @@
 @radio-label-color: var(--van-text-color);
 @radio-checked-icon-color: var(--van-primary-color);
 @radio-disabled-icon-color: var(--van-gray-5);
-@radio-disabled-label-color: var(--van-gray-5);
+@radio-disabled-label-color: var(--van-text-color-tertiary);
 @radio-disabled-background-color: var(--van-border-color);
