--- a/packages/vant/src/sidebar-item/var.less
+++ b/packages/vant/src/sidebar-item/var.less
@@ -3,7 +3,7 @@
 @sidebar-font-size: var(--van-font-size-md);
 @sidebar-line-height: var(--van-line-height-md);
 @sidebar-text-color: var(--van-text-color);
-@sidebar-disabled-text-color: var(--van-gray-5);
+@sidebar-disabled-text-color: var(--van-text-color-tertiary);
 @sidebar-padding: 20px var(--van-padding-sm);
 @sidebar-active-color: var(--van-active-color);
 @sidebar-background-color: var(--van-background-color);
