--- a/packages/vant/src/style/css-variables.less
+++ b/packages/vant/src/style/css-variables.less
@@ -29,12 +29,14 @@
   --van-danger-color: @danger-color;
   --van-warning-color: @warning-color;
   --van-text-color: @text-color;
+  --van-text-color-secondary: @text-color-secondary;
+  --van-text-color-tertiary: @text-color-tertiary;
+  --van-text-link-color: @text-link-color;
   --van-active-color: @active-color;
   --van-active-opacity: @active-opacity;
   --van-disabled-opacity: @disabled-opacity;
   --van-background-color: @background-color;
   --van-background-color-light: @background-color-light;
-  --van-text-link-color: @text-link-color;
 
   // Padding
   --van-padding-base: @padding-base;
