--- a/packages/vant/src/address-list/var.less
+++ b/packages/vant/src/address-list/var.less
@@ -9,7 +9,7 @@
 @address-list-add-button-z-index: 999;
 @address-list-item-padding: var(--van-padding-sm);
 @address-list-item-text-color: var(--van-text-color);
-@address-list-item-disabled-text-color: var(--van-gray-5);
+@address-list-item-disabled-text-color: var(--van-text-color-tertiary);
 @address-list-item-font-size: 13px;
 @address-list-item-line-height: var(--van-line-height-sm);
 @address-list-item-radio-icon-color: var(--van-danger-color);
