--- a/packages/vant/src/share-sheet/var.less
+++ b/packages/vant/src/share-sheet/var.less
@@ -11,7 +11,7 @@
 @share-sheet-icon-size: 48px;
 @share-sheet-option-name-color: var(--van-gray-7);
 @share-sheet-option-name-font-size: var(--van-font-size-sm);
-@share-sheet-option-description-color: var(--van-gray-5);
+@share-sheet-option-description-color: var(--van-text-color-tertiary);
 @share-sheet-option-description-font-size: var(--van-font-size-sm);
 @share-sheet-cancel-button-font-size: var(--van-font-size-lg);
 @share-sheet-cancel-button-height: 48px;
