--- a/packages/vant/src/style/var.less
+++ b/packages/vant/src/style/var.less
@@ -27,6 +27,7 @@
 @warning-color: var(--van-orange);
 @text-color: var(--van-gray-8);
 @text-color-secondary: var(--van-gray-6);
+@text-color-tertiary: var(--van-gray-5);
 @text-link-color: #576b95;
 @active-color: var(--van-gray-2);
 @active-opacity: 0.6;
