style(SubmitBar): adjust tip color

--- a/packages/vant/src/contact-card/index.less
+++ b/packages/vant/src/contact-card/index.less
@@ -34,8 +34,8 @@
     height: 2px;
     background: repeating-linear-gradient(
       -45deg,
-      #ff6c6c 0,
-      #ff6c6c 20%,
+      var(--van-warning-color) 0,
+      var(--van-warning-color) 20%,
       transparent 0,
       transparent 25%,
       var(--van-primary-color) 0,
