--- a/packages/vant/src/submit-bar/var.less
+++ b/packages/vant/src/submit-bar/var.less
@@ -12,8 +12,8 @@
 @submit-bar-tip-padding: var(--van-padding-xs) var(--van-padding-sm);
 @submit-bar-tip-font-size: var(--van-font-size-sm);
 @submit-bar-tip-line-height: 1.5;
-@submit-bar-tip-color: #f56723;
-@submit-bar-tip-background-color: #fff7cc;
+@submit-bar-tip-color: var(--van-orange-dark);
+@submit-bar-tip-background-color: var(--van-orange-light);
 @submit-bar-tip-icon-size: 12px;
 @submit-bar-button-height: 40px;
 @submit-bar-padding: 0 var(--van-padding-md);
