chore: adjust some css vars for dark mode

--- a/packages/vant/src/password-input/var.less
+++ b/packages/vant/src/password-input/var.less
@@ -9,7 +9,7 @@
 @password-input-info-font-size: var(--van-font-size-md);
 @password-input-error-info-color: var(--van-danger-color);
 @password-input-dot-size: 10px;
-@password-input-dot-color: var(--van-black);
+@password-input-dot-color: var(--van-text-color);
 @password-input-text-color: var(--van-text-color);
 @password-input-cursor-color: var(--van-text-color);
 @password-input-cursor-width: 1px;
