--- a/packages/vant/src/slider/var.less
+++ b/packages/vant/src/slider/var.less
@@ -7,5 +7,5 @@
 @slider-button-width: 24px;
 @slider-button-height: 24px;
 @slider-button-border-radius: 50%;
-@slider-button-background-color: var(--van-background-color-light);
+@slider-button-background-color: var(--van-white);
 @slider-button-box-shadow: 0 1px 2px rgba(0, 0, 0, 0.5);
