--- a/packages/vant/src/switch/var.less
+++ b/packages/vant/src/switch/var.less
@@ -4,7 +4,7 @@
 @switch-width: 2em;
 @switch-height: 1em;
 @switch-node-size: 1em;
-@switch-node-background-color: var(--van-background-color-light);
+@switch-node-background-color: var(--van-white);
 @switch-node-box-shadow: 0 3px 1px 0 rgba(0, 0, 0, 0.05),
   0 2px 2px 0 rgba(0, 0, 0, 0.1), 0 3px 3px 0 rgba(0, 0, 0, 0.05);
 @switch-background-color: var(--van-background-color-light);
