style(Picker): add --van-picker-mask-color css var

--- a/packages/vant/src/picker/var.less
+++ b/packages/vant/src/picker/var.less
@@ -10,7 +10,13 @@
 @picker-cancel-action-color: var(--van-text-color-secondary);
 @picker-option-padding: 0 var(--van-padding-base);
 @picker-option-font-size: var(--van-font-size-lg);
-@picker-option-text-color: var(--van-black);
+@picker-option-text-color: var(--van-text-color);
 @picker-option-disabled-opacity: 0.3;
+@picker-mask-color: linear-gradient(
+    180deg,
+    rgba(255, 255, 255, 0.9),
+    rgba(255, 255, 255, 0.4)
+  ),
+  linear-gradient(0deg, rgba(255, 255, 255, 0.9), rgba(255, 255, 255, 0.4));
 @picker-loading-icon-color: var(--van-primary-color);
 @picker-loading-mask-color: rgba(255, 255, 255, 0.9);
