--- a/packages/vant/src/picker/index.less
+++ b/packages/vant/src/picker/index.less
@@ -15,6 +15,7 @@
   --van-picker-option-disabled-opacity: @picker-option-disabled-opacity;
   --van-picker-loading-icon-color: @picker-loading-icon-color;
   --van-picker-loading-mask-color: @picker-loading-mask-color;
+  --van-picker-mask-color: @picker-mask-color;
 }
 
 .van-picker {
@@ -92,12 +93,7 @@
     z-index: 1;
     width: 100%;
     height: 100%;
-    background-image: linear-gradient(
-        180deg,
-        hsla(0, 0%, 100%, 0.9),
-        hsla(0, 0%, 100%, 0.4)
-      ),
-      linear-gradient(0deg, hsla(0, 0%, 100%, 0.9), hsla(0, 0%, 100%, 0.4));
+    background-image: var(--van-picker-mask-color);
     background-repeat: no-repeat;
     background-position: top, bottom;
     // fix rendering failure during animation on safari
