--- a/src/style/third.less
+++ b/src/style/third.less
@@ -140,5 +140,12 @@ div[root-app] .l-root-h5 {
     font-weight: normal;
     font-size: 4.26667vw;
     color: #f55a4c;
+
+    span {
+      display: flex;
+      height: 100%;
+      justify-content:center;
+      align-items: center;
+    }
   }
 }
