style: rename some unreleased css vars

--- a/packages/vant/src/calendar/var.less
+++ b/packages/vant/src/calendar/var.less
@@ -22,6 +22,6 @@
 @calendar-info-font-size: var(--van-font-size-xs);
 @calendar-info-line-height: var(--van-line-height-xs);
 @calendar-selected-day-background-color: var(--van-danger-color);
-@calendar-day-disabled-color: var(--van-text-color-tertiary);
+@calendar-day-disabled-color: var(--van-text-color-3);
 @calendar-confirm-button-height: 36px;
 @calendar-confirm-button-margin: 7px 0;
