--- a/packages/vant/src/step/var.less
+++ b/packages/vant/src/step/var.less
@@ -1,6 +1,6 @@
 @import '../style/var.less';
 
-@step-text-color: var(--van-text-color-secondary);
+@step-text-color: var(--van-text-color-2);
 @step-active-color: var(--van-success-color);
 @step-process-text-color: var(--van-text-color);
 @step-font-size: var(--van-font-size-md);
