--- a/packages/vant/src/style/css-variables.less
+++ b/packages/vant/src/style/css-variables.less
@@ -29,8 +29,8 @@
   --van-danger-color: @danger-color;
   --van-warning-color: @warning-color;
   --van-text-color: @text-color;
-  --van-text-color-secondary: @text-color-secondary;
-  --van-text-color-tertiary: @text-color-tertiary;
+  --van-text-color-2: @text-color-2;
+  --van-text-color-3: @text-color-3;
   --van-text-link-color: @text-link-color;
   --van-active-color: @active-color;
   --van-active-opacity: @active-opacity;
