--- a/packages/vant/src/style/var.less
+++ b/packages/vant/src/style/var.less
@@ -26,8 +26,8 @@
 @danger-color: var(--van-red);
 @warning-color: var(--van-orange);
 @text-color: var(--van-gray-8);
-@text-color-secondary: var(--van-gray-6);
-@text-color-tertiary: var(--van-gray-5);
+@text-color-2: var(--van-gray-6);
+@text-color-3: var(--van-gray-5);
 @text-link-color: #576b95;
 @active-color: var(--van-gray-2);
 @active-opacity: 0.6;
