--- a/packages/vant/src/uploader/var.less
+++ b/packages/vant/src/uploader/var.less
@@ -3,7 +3,7 @@
 @uploader-size: 80px;
 @uploader-icon-size: 24px;
 @uploader-icon-color: var(--van-gray-4);
-@uploader-text-color: var(--van-text-color-secondary);
+@uploader-text-color: var(--van-text-color-2);
 @uploader-text-font-size: var(--van-font-size-sm);
 @uploader-upload-background-color: var(--van-gray-1);
 @uploader-upload-active-color: var(--van-active-color);
