--- a/packages/vant/src/cell-group/var.less
+++ b/packages/vant/src/cell-group/var.less
@@ -1,7 +1,7 @@
 @import '../style/var.less';
 
 @cell-group-background-color: var(--van-background-color-light);
-@cell-group-title-color: var(--van-text-color-secondary);
+@cell-group-title-color: var(--van-text-color-2);
 @cell-group-title-padding: var(--van-padding-md) var(--van-padding-md)
   var(--van-padding-xs);
 @cell-group-title-font-size: var(--van-font-size-md);
