--- a/packages/vant/src/cell/var.less
+++ b/packages/vant/src/cell/var.less
@@ -9,11 +9,11 @@
 @cell-border-color: var(--van-border-color);
 @cell-active-color: var(--van-active-color);
 @cell-required-color: var(--van-danger-color);
-@cell-label-color: var(--van-text-color-secondary);
+@cell-label-color: var(--van-text-color-2);
 @cell-label-font-size: var(--van-font-size-sm);
 @cell-label-line-height: var(--van-line-height-sm);
 @cell-label-margin-top: var(--van-padding-base);
-@cell-value-color: var(--van-text-color-secondary);
+@cell-value-color: var(--van-text-color-2);
 @cell-icon-size: 16px;
 @cell-right-icon-color: var(--van-gray-6);
 @cell-large-vertical-padding: var(--van-padding-sm);
