--- a/packages/vant/src/checkbox/var.less
+++ b/packages/vant/src/checkbox/var.less
@@ -7,5 +7,5 @@
 @checkbox-label-color: var(--van-text-color);
 @checkbox-checked-icon-color: var(--van-primary-color);
 @checkbox-disabled-icon-color: var(--van-gray-5);
-@checkbox-disabled-label-color: var(--van-text-color-tertiary);
+@checkbox-disabled-label-color: var(--van-text-color-3);
 @checkbox-disabled-background-color: var(--van-border-color);
