--- a/packages/vant/src/collapse-item/var.less
+++ b/packages/vant/src/collapse-item/var.less
@@ -4,6 +4,6 @@
 @collapse-item-content-padding: var(--van-padding-sm) var(--van-padding-md);
 @collapse-item-content-font-size: var(--van-font-size-md);
 @collapse-item-content-line-height: 1.5;
-@collapse-item-content-text-color: var(--van-text-color-secondary);
+@collapse-item-content-text-color: var(--van-text-color-2);
 @collapse-item-content-background-color: var(--van-background-color-light);
-@collapse-item-title-disabled-color: var(--van-text-color-tertiary);
+@collapse-item-title-disabled-color: var(--van-text-color-3);
