--- a/packages/vant/src/coupon-list/index.less
+++ b/packages/vant/src/coupon-list/index.less
@@ -27,7 +27,7 @@
       border-radius: 17px;
 
       &::placeholder {
-        color: var(--van-text-color-tertiary);
+        color: var(--van-text-color-3);
       }
     }
 
