--- a/packages/vant/src/dropdown-menu/var.less
+++ b/packages/vant/src/dropdown-menu/var.less
@@ -6,7 +6,7 @@
 @dropdown-menu-title-font-size: 15px;
 @dropdown-menu-title-text-color: var(--van-text-color);
 @dropdown-menu-title-active-text-color: var(--van-danger-color);
-@dropdown-menu-title-disabled-text-color: var(--van-text-color-secondary);
+@dropdown-menu-title-disabled-text-color: var(--van-text-color-2);
 @dropdown-menu-title-padding: 0 var(--van-padding-xs);
 @dropdown-menu-title-line-height: var(--van-line-height-lg);
 @dropdown-menu-option-active-color: var(--van-danger-color);
