--- a/packages/vant/src/empty/var.less
+++ b/packages/vant/src/empty/var.less
@@ -4,7 +4,7 @@
 @empty-image-size: 160px;
 @empty-description-margin-top: var(--van-padding-md);
 @empty-description-padding: 0 60px;
-@empty-description-color: var(--van-text-color-secondary);
+@empty-description-color: var(--van-text-color-2);
 @empty-description-font-size: var(--van-font-size-md);
 @empty-description-line-height: var(--van-line-height-md);
 @empty-bottom-margin-top: 24px;
