--- a/packages/vant/src/field/var.less
+++ b/packages/vant/src/field/var.less
@@ -5,8 +5,8 @@
 @field-label-margin-right: var(--van-padding-sm);
 @field-input-text-color: var(--van-text-color);
 @field-input-error-text-color: var(--van-danger-color);
-@field-input-disabled-text-color: var(--van-text-color-tertiary);
-@field-placeholder-text-color: var(--van-text-color-tertiary);
+@field-input-disabled-text-color: var(--van-text-color-3);
+@field-placeholder-text-color: var(--van-text-color-3);
 @field-icon-size: 16px;
 @field-clear-icon-size: 16px;
 @field-clear-icon-color: var(--van-gray-5);
@@ -17,5 +17,5 @@
 @field-word-limit-color: var(--van-gray-7);
 @field-word-limit-font-size: var(--van-font-size-sm);
 @field-word-limit-line-height: 16px;
-@field-disabled-text-color: var(--van-text-color-tertiary);
+@field-disabled-text-color: var(--van-text-color-3);
 @field-required-mark-color: var(--van-red);
