--- a/packages/vant/src/image/var.less
+++ b/packages/vant/src/image/var.less
@@ -1,6 +1,6 @@
 @import '../style/var.less';
 
-@image-placeholder-text-color: var(--van-text-color-secondary);
+@image-placeholder-text-color: var(--van-text-color-2);
 @image-placeholder-font-size: var(--van-font-size-md);
 @image-placeholder-background-color: var(--van-background-color);
 @image-loading-icon-size: 32px;
