--- a/packages/vant/src/password-input/var.less
+++ b/packages/vant/src/password-input/var.less
@@ -5,7 +5,7 @@
 @password-input-font-size: 20px;
 @password-input-border-radius: 6px;
 @password-input-background-color: var(--van-background-color-light);
-@password-input-info-color: var(--van-text-color-secondary);
+@password-input-info-color: var(--van-text-color-2);
 @password-input-info-font-size: var(--van-font-size-md);
 @password-input-error-info-color: var(--van-danger-color);
 @password-input-dot-size: 10px;
