--- a/packages/vant/src/picker/var.less
+++ b/packages/vant/src/picker/var.less
@@ -7,7 +7,7 @@
 @picker-action-padding: 0 var(--van-padding-md);
 @picker-action-font-size: var(--van-font-size-md);
 @picker-confirm-action-color: var(--van-text-link-color);
-@picker-cancel-action-color: var(--van-text-color-secondary);
+@picker-cancel-action-color: var(--van-text-color-2);
 @picker-option-padding: 0 var(--van-padding-base);
 @picker-option-font-size: var(--van-font-size-lg);
 @picker-option-text-color: var(--van-text-color);
