--- a/packages/vant/src/popover/var.less
+++ b/packages/vant/src/popover/var.less
@@ -9,7 +9,7 @@
 @popover-action-icon-size: 20px;
 @popover-light-text-color: var(--van-text-color);
 @popover-light-background-color: var(--van-background-color-light);
-@popover-light-action-disabled-text-color: var(--van-text-color-tertiary);
+@popover-light-action-disabled-text-color: var(--van-text-color-3);
 @popover-dark-text-color: var(--van-white);
 @popover-dark-background-color: #4a4a4a;
-@popover-dark-action-disabled-text-color: var(--van-text-color-secondary);
+@popover-dark-action-disabled-text-color: var(--van-text-color-2);
