--- a/packages/vant/src/share-sheet/var.less
+++ b/packages/vant/src/share-sheet/var.less
@@ -5,13 +5,13 @@
 @share-sheet-title-color: var(--van-text-color);
 @share-sheet-title-font-size: var(--van-font-size-md);
 @share-sheet-title-line-height: var(--van-line-height-md);
-@share-sheet-description-color: var(--van-text-color-secondary);
+@share-sheet-description-color: var(--van-text-color-2);
 @share-sheet-description-font-size: var(--van-font-size-sm);
 @share-sheet-description-line-height: 16px;
 @share-sheet-icon-size: 48px;
 @share-sheet-option-name-color: var(--van-gray-7);
 @share-sheet-option-name-font-size: var(--van-font-size-sm);
-@share-sheet-option-description-color: var(--van-text-color-tertiary);
+@share-sheet-option-description-color: var(--van-text-color-3);
 @share-sheet-option-description-font-size: var(--van-font-size-sm);
 @share-sheet-cancel-button-font-size: var(--van-font-size-lg);
 @share-sheet-cancel-button-height: 48px;
