--- a/packages/vant/src/stepper/var.less
+++ b/packages/vant/src/stepper/var.less
@@ -10,6 +10,6 @@
 @stepper-input-font-size: var(--van-font-size-md);
 @stepper-input-line-height: normal;
 @stepper-input-text-color: var(--van-text-color);
-@stepper-input-disabled-text-color: var(--van-text-color-tertiary);
+@stepper-input-disabled-text-color: var(--van-text-color-3);
 @stepper-input-disabled-background-color: var(--van-active-color);
 @stepper-border-radius: var(--van-border-radius-md);
