--- a/packages/vant/src/tabs/var.less
+++ b/packages/vant/src/tabs/var.less
@@ -2,7 +2,7 @@
 
 @tab-text-color: var(--van-gray-7);
 @tab-active-text-color: var(--van-text-color);
-@tab-disabled-text-color: var(--van-text-color-tertiary);
+@tab-disabled-text-color: var(--van-text-color-3);
 @tab-font-size: var(--van-font-size-md);
 @tab-line-height: var(--van-line-height-md);
 @tabs-default-color: var(--van-danger-color);
