fix: swipe cant drag for ide and add inctreator click

--- a/src/swipe/index.less
+++ b/src/swipe/index.less
@@ -53,8 +53,8 @@
   }
 
   &__indicator {
-    width: @swipe-indicator-size;
-    height: @swipe-indicator-size;
+    width: @swipe-indicator-size*2;
+    height: @swipe-indicator-size*2;
     background-color: @swipe-indicator-inactive-background-color;
     border-radius: 100%;
     opacity: @swipe-indicator-inactive-opacity;
