--- a/src/swipe/index.less
+++ b/src/swipe/index.less
@@ -53,8 +53,8 @@
   }
 
   &__indicator {
-    width: @swipe-indicator-size;
-    height: @swipe-indicator-size;
+    width: @swipe-indicator-size*2;
+    height: @swipe-indicator-size*2;
     // background-color: @swipe-indicator-inactive-background-color;
     background-color: #337EFF;
     border-radius: 100%;
@@ -63,7 +63,7 @@
       background-color @animation-duration-fast;
 
     &:not(:last-child) {
-      margin-right: @swipe-indicator-size;
+      margin-right: @swipe-indicator-size*2;
     }
 
     &--active {
