--- a/packages/vant/src/switch/index.less
+++ b/packages/vant/src/switch/index.less
@@ -33,6 +33,8 @@
     left: 0;
     width: var(--van-switch-node-size);
     height: var(--van-switch-node-size);
+    // https://github.com/youzan/vant/issues/9839
+    font-size: inherit;
     background: var(--van-switch-node-background-color);
     border-radius: 100%;
     box-shadow: var(--van-switch-node-box-shadow);
