--- a/src/dropdown-item/index.less
+++ b/src/dropdown-item/index.less
@@ -4,7 +4,8 @@
   position: fixed;
   right: 0;
   left: 0;
-  z-index: @dropdown-item-z-index;
+  // z-index: @dropdown-item-z-index;
+  z-index: 9010;
   overflow: hidden;
 
   &__icon {
