--- a/src/step/index.less
+++ b/src/step/index.less
@@ -58,9 +58,9 @@
 
     .van-step__title {
       display: inline-block;
-      margin-left: 3px;
+      // margin-left: 3px;
       font-size: @step-horizontal-title-font-size;
-      transform: translateX(-50%);
+      // transform: translateX(-50%);
 
       @media (max-width: 321px) {
         font-size: @step-horizontal-title-font-size - 1px;
