feat(ImagePreview): add props `fitHeight` optimize long image preview (#3928)
test image url https://img.zcool.cn/community/014c635c20d116a80121df9076fa16.jpg@1280w_1l_2o_100sh.jpg

--- a/src/image-preview/index.less
+++ b/src/image-preview/index.less
@@ -33,6 +33,18 @@
       height: 100%;
     }
 
+    &--vertical&--fit-height {
+      align-self: flex-start;
+    }
+
+    &--fit-height {
+      height: auto;
+      overflow-y: auto;
+      img {
+        height: auto;
+      }
+    }
+
     img {
       // disable desktop browser image drag
       -webkit-user-drag: none;
