fix: del lastchild style

--- a/src/step/index.less
+++ b/src/step/index.less
@@ -31,9 +31,9 @@
     }
 
     &:last-child {
-      position: absolute;
-      right: 1px;
-      width: auto;
+      // position: absolute;
+      // right: 1px;
+      // width: auto;
 
       .van-step__title {
         margin-left: 0;
@@ -41,8 +41,8 @@
       }
 
       .van-step__circle-container {
-        right: -9px;
-        left: auto;
+        // right: -9px;
+        // left: auto;
       }
     }
 
