--- a/src/style/third.less
+++ b/src/style/third.less
@@ -149,3 +149,75 @@ div[root-app] .l-root-h5 {
     }
   }
 }
+
+.h5template-404 {
+  height: 100vh;
+  background-color: #fff;
+  overflow: hidden;
+
+  .m404-image-wrap {
+    margin-top: 37.33333vw;
+
+    .m404-image {
+      display: block;
+      width: 42.66667vw;
+      margin-left: auto;
+      margin-right: auto;
+    }
+
+    .m404-image-text {
+      margin-top: 4.26667vw;
+      text-align: center;
+      font-family: PingFang SC;
+      font-style: normal;
+      font-weight: normal;
+      font-size: 14px;
+      color: #999;
+    }
+  }
+}
+
+.h5template-401 {
+  overflow: hidden;
+  height: 100vh;
+  background-color: #fff;
+
+  .m401-image-wrap {
+    margin-top: 37.33333vw;
+
+    .m401-image {
+      display: block;
+      width: 42.66667vw;
+      margin-left: auto;
+      margin-right: auto;
+    }
+
+    .m401-image-text {
+      margin-top: 4.26667vw;
+      text-align: center;
+      font-family: PingFang SC;
+      font-style: normal;
+      font-weight: normal;
+      font-size: 14px;
+      color: #999;
+    }
+
+    .m401-image-btn {
+      // display: block;
+      width: 25.6vw;
+      height: 8.53333vw;
+      line-height: 8.53333vw;
+      background: #337eff;
+      border-radius: 4px;
+      font-family: PingFang SC;
+      font-style: normal;
+      font-weight: normal;
+      font-size: 14px;
+      color: #fff;
+      text-align: center;
+      margin-left: auto;
+      margin-right: auto;
+      margin-top: 40px;
+    }
+  }
+}
