--- a/src/iconv/index.less
+++ b/src/iconv/index.less
@@ -1,7 +1,7 @@
 @import '../style/var';
-@import '~@vant/icons/src/encode-woff2.less';
+@import './new';
 
-.van-icon {
+.van-iconv {
   &__image {
     width: 1em;
     height: 1em;
