--- a/src/iconv/common.less
+++ b/src/iconv/common.less
@@ -8,6 +8,7 @@
   font-size: inherit;
   text-rendering: auto;
   -webkit-font-smoothing: antialiased;
+  text-align: center;
 
   &:before {
     display: block;
