--- a/src/iconv/index.less
+++ b/src/iconv/index.less
@@ -7,4 +7,12 @@
     height: 1em;
     object-fit: contain;
   }
+  &__text {
+    display: block;
+    line-height: 1;
+    font-size: 0.5em;
+  }
+  &__text[vusion-slot-name] {
+    cursor: pointer;
+  }
 }
