--- a/src/tabbar-item/index.less
+++ b/src/tabbar-item/index.less
@@ -13,7 +13,7 @@
 
   &__icon {
     position: relative;
-    margin-bottom: @tabbar-item-margin-bottom;
+    // margin-bottom: @tabbar-item-margin-bottom;
     font-size: @tabbar-item-icon-size;
 
     .van-icon {
