--- a/src/iconv/index.less
+++ b/src/iconv/index.less
@@ -1,5 +1,5 @@
 @import '../style/var';
-@import './new';
+@import './icon.less';
 
 .van-iconv {
   &__image {
@@ -12,5 +12,8 @@
     line-height: 1;
     font-size: 0.5em;
     margin-top: @tabbar-item-margin-bottom;
+  }
+  &:before {
+    display: block;
   }
 }
