feat: button cell add icon

--- a/src/style/third.less
+++ b/src/style/third.less
@@ -79,6 +79,7 @@ div[root-app] .l-root-h5 {
     padding-right: 4.26667vw;
     height: 11.73333vw;
     .nvai-top-image {
+      font-size: 24px;
       width: 6.4vw;
       display: block;
     }
