--- a/packages/vant-icons/src/index.less
+++ b/packages/vant-icons/src/index.less
@@ -5,10 +5,10 @@
   font-style: normal;
   font-display: auto;
   font-family: 'vant-icon';
-  src: url('//at.alicdn.com/t/font_2553510_5imfhdc20ag.woff2?t=1640074908811')
+  src: url('https://at.alicdn.com/t/font_2553510_5imfhdc20ag.woff2?t=1640074908811')
       format('woff2'),
-    url('//at.alicdn.com/t/font_2553510_5imfhdc20ag.woff?t=1640074908811')
+    url('https://at.alicdn.com/t/font_2553510_5imfhdc20ag.woff?t=1640074908811')
       format('woff'),
-    url('//at.alicdn.com/t/font_2553510_5imfhdc20ag.ttf?t=1640074908811')
+    url('https://at.alicdn.com/t/font_2553510_5imfhdc20ag.ttf?t=1640074908811')
       format('truetype');
 }
