feat: tabbar-item style

--- a/src/tabbar-item/index.less
+++ b/src/tabbar-item/index.less
@@ -29,16 +29,21 @@
   }
 
   &--active {
-    color: @tabbar-item-active-color;
+    color: #337EFF;
     background-color: @tabbar-item-active-background-color;
   }
 
   &__text {
     margin-top: 4px;
+    font-size: 10px;
   }
 
   .van-info {
     // margin-top: @padding-base;
     right: -10px;
+  }
+
+  .van-iconv {
+    font-size: 24px;
   }
 }
