fix: font style

--- a/src/style/third.less
+++ b/src/style/third.less
@@ -161,18 +161,18 @@ div[root-app] .l-root-h5 {
 
     .m404-image {
       display: block;
-      width: 42.66667vw;
+      width: 160px; /* px-to-viewport-ignore */
       margin-left: auto;
       margin-right: auto;
     }
 
     .m404-image-text {
-      margin-top: 4.26667vw;
+      margin-top: 16px; /* px-to-viewport-ignore */
       text-align: center;
       font-family: PingFang SC;
       font-style: normal;
       font-weight: normal;
-      font-size: 14px;
+      font-size: 14px; /* px-to-viewport-ignore */
       color: #999;
     }
   }
@@ -188,37 +188,37 @@ div[root-app] .l-root-h5 {
 
     .m401-image {
       display: block;
-      width: 42.66667vw;
+      width: 160px; /* px-to-viewport-ignore */
       margin-left: auto;
       margin-right: auto;
     }
 
     .m401-image-text {
-      margin-top: 4.26667vw;
+      margin-top: 16px; /* px-to-viewport-ignore */
       text-align: center;
       font-family: PingFang SC;
       font-style: normal;
       font-weight: normal;
-      font-size: 14px;
+      font-size: 14px; /* px-to-viewport-ignore */
       color: #999;
     }
 
     .m401-image-btn {
       // display: block;
-      width: 25.6vw;
-      height: 8.53333vw;
-      line-height: 8.53333vw;
+      width: 96px; /* px-to-viewport-ignore */
+      height: 32px;/* px-to-viewport-ignore */
+      line-height: 32px;
       background: #337eff;
-      border-radius: 4px;
+      border-radius: 4px; /* px-to-viewport-ignore */
       font-family: PingFang SC;
       font-style: normal;
       font-weight: normal;
-      font-size: 14px;
+      font-size: 14px; /* px-to-viewport-ignore */
       color: #fff;
       text-align: center;
       margin-left: auto;
       margin-right: auto;
-      margin-top: 40px;
+      margin-top: 40px; /* px-to-viewport-ignore */
     }
   }
 }
