--- a/src/iconv/index.less
+++ b/src/iconv/index.less
@@ -21,6 +21,8 @@
   &__slot {
     line-height: 1;
     font-size: inherit;
+    font-size: 14px;
+    color: #666;
   }
   &:before {
     padding: 8px;
