--- a/src/tabbar/index.less
+++ b/src/tabbar/index.less
@@ -9,6 +9,7 @@
   padding-bottom: constant(safe-area-inset-bottom);
   padding-bottom: env(safe-area-inset-bottom);
   background-color: @tabbar-background-color;
+  font-size: 16px;
 
   &--fixed {
     position: fixed;
