--- a/packages/vant/src/popover/var.less
+++ b/packages/vant/src/popover/var.less
@@ -1,6 +1,7 @@
 @import '../style/var.less';
 
 @popover-arrow-size: 6px;
+@popover-arrow-offset-size: -6px;
 @popover-border-radius: var(--van-border-radius-lg);
 @popover-action-width: 128px;
 @popover-action-height: 44px;
