chore: minus css var

--- a/packages/vant/src/popover/index.less
+++ b/packages/vant/src/popover/index.less
@@ -84,7 +84,7 @@
       border-top-color: currentColor;
       border-bottom-width: 0;
       transform: translate(-50%, 0%);
-      margin-bottom: calc(0px - var(--van-popover-arrow-size));
+      margin-bottom: calc(var(--van-popover-arrow-size) * -1);
     }
   }
 
@@ -118,7 +118,7 @@
       border-right-width: 0;
       border-left-color: currentColor;
       transform: translate(0%, -50%);
-      margin-right: calc(0px - var(--van-popover-arrow-size));
+      margin-right: calc(var(--van-popover-arrow-size) * -1);
     }
   }
 
@@ -152,7 +152,7 @@
       border-right-color: currentColor;
       border-left-width: 0;
       transform: translate(0%, -50%);
-      margin-left: calc(0px - var(--van-popover-arrow-size));
+      margin-left: calc(var(--van-popover-arrow-size) * -1);
     }
   }
 
@@ -186,7 +186,7 @@
       border-top-width: 0;
       border-bottom-color: currentColor;
       transform: translate(-50%, 0%);
-      margin-top: calc(0px - var(--van-popover-arrow-size));
+      margin-top: calc(var(--van-popover-arrow-size) * -1);
     }
   }
 
