feat(@vant/cli): using esbuild to minify css

--- a/packages/vant/src/address-list/index.less
+++ b/packages/vant/src/address-list/index.less
@@ -94,7 +94,7 @@
     right: var(--van-padding-md);
     color: var(--van-gray-6);
     font-size: var(--van-address-list-edit-icon-size);
-    transform: translate(0, -50%);
+    transform: translateY(-50%);
   }
 
   .van-cell {
