--- a/packages/vant/src/icon/index.less
+++ b/packages/vant/src/icon/index.less
@@ -2,9 +2,9 @@
 
 .van-icon {
   &__image {
+    display: block;
     width: 1em;
     height: 1em;
     object-fit: contain;
-    vertical-align: bottom;
   }
 }
