style(Button): increase default border radius from 2px to 4px

--- a/packages/vant/src/button/index.less
+++ b/packages/vant/src/button/index.less
@@ -27,7 +27,7 @@
   --van-button-warning-background: var(--van-warning-color);
   --van-button-warning-border-color: var(--van-warning-color);
   --van-button-border-width: var(--van-border-width);
-  --van-button-radius: var(--van-radius-sm);
+  --van-button-radius: var(--van-radius-md);
   --van-button-round-radius: var(--van-radius-max);
   --van-button-plain-background: var(--van-white);
   --van-button-disabled-opacity: var(--van-disabled-opacity);
