style(Calendar): using primary color by default

--- a/packages/vant/src/cascader/index.less
+++ b/packages/vant/src/cascader/index.less
@@ -7,7 +7,7 @@
   --van-cascader-close-icon-color: var(--van-gray-5);
   --van-cascader-selected-icon-size: 18px;
   --van-cascader-tabs-height: 48px;
-  --van-cascader-active-color: var(--van-danger-color);
+  --van-cascader-active-color: var(--van-primary-color);
   --van-cascader-options-height: 384px;
   --van-cascader-option-disabled-color: var(--van-text-color-3);
   --van-cascader-tab-color: var(--van-text-color);
