--- a/packages/vant/src/calendar/index.less
+++ b/packages/vant/src/calendar/index.less
@@ -13,14 +13,14 @@
   --van-calendar-day-height: 64px;
   --van-calendar-day-font-size: var(--van-font-size-lg);
   --van-calendar-range-edge-color: var(--van-white);
-  --van-calendar-range-edge-background: var(--van-danger-color);
-  --van-calendar-range-middle-color: var(--van-danger-color);
+  --van-calendar-range-edge-background: var(--van-primary-color);
+  --van-calendar-range-middle-color: var(--van-primary-color);
   --van-calendar-range-middle-background-opacity: 0.1;
   --van-calendar-selected-day-size: 54px;
   --van-calendar-selected-day-color: var(--van-white);
   --van-calendar-info-font-size: var(--van-font-size-xs);
   --van-calendar-info-line-height: var(--van-line-height-xs);
-  --van-calendar-selected-day-background: var(--van-danger-color);
+  --van-calendar-selected-day-background: var(--van-primary-color);
   --van-calendar-day-disabled-color: var(--van-text-color-3);
   --van-calendar-confirm-button-height: 36px;
   --van-calendar-confirm-button-margin: 7px 0;
