style(DropdownMenu): using primary color by default

--- a/packages/vant/src/dialog/index.less
+++ b/packages/vant/src/dialog/index.less
@@ -17,7 +17,7 @@
   --van-dialog-has-title-message-padding-top: var(--van-padding-xs);
   --van-dialog-button-height: 48px;
   --van-dialog-round-button-height: 36px;
-  --van-dialog-confirm-button-text-color: var(--van-danger-color);
+  --van-dialog-confirm-button-text-color: var(--van-primary-color);
 }
 
 .van-dialog {
