--- a/packages/vant/src/dropdown-menu/index.less
+++ b/packages/vant/src/dropdown-menu/index.less
@@ -4,11 +4,11 @@
   --van-dropdown-menu-shadow: 0 2px 12px rgba(100, 101, 102, 0.12);
   --van-dropdown-menu-title-font-size: 15px;
   --van-dropdown-menu-title-text-color: var(--van-text-color);
-  --van-dropdown-menu-title-active-text-color: var(--van-danger-color);
+  --van-dropdown-menu-title-active-text-color: var(--van-primary-color);
   --van-dropdown-menu-title-disabled-text-color: var(--van-text-color-2);
   --van-dropdown-menu-title-padding: 0 var(--van-padding-xs);
   --van-dropdown-menu-title-line-height: var(--van-line-height-lg);
-  --van-dropdown-menu-option-active-color: var(--van-danger-color);
+  --van-dropdown-menu-option-active-color: var(--van-primary-color);
   --van-dropdown-menu-content-max-height: 80%;
 }
 
